technical-documentation/CSS/style.css
/* imports */
@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');

/* global rules */

:root {
    --bright: #f0f0f0;
    --dark: #333;
    --accent: wheat;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Questrial",sans-serif;
}

h1, h2, h3 {
    font-family: "Zilla Slab", serif;
    margin: 0;
    padding: 0;
}


.headerText {
    font-family: "Zilla Slab", serif;
    font-size: 36px;
    margin: 8px 0;
    line-height: initial;
}

table, th, td {
    border: 2px solid var(--dark);
}

table {
    border-collapse: collapse;
    box-sizing: border-box;
}

th, td {
    padding: 8px;
}

th {
    background-color: var(--accent);
}

td {
    background-color: white;
}

article {
    margin: 0 24px;
    text-align: justify;
}

img {
    max-width: 100%;
}

code {
    font-size: 14px;
    color: var(--accent);
    background-color: var(--dark);
}

pre {
    background-color: var(--dark);
    color: var(--accent);
    margin: 0 72px;
    padding: 20px 40px;
    border-radius: 8px;
}

figure {
    margin: 1em 0px;
}
/* rules */

.gridContainer {
    display: grid;
    grid-template-columns: 20em 1fr;
    height: 100vh;
    box-sizing: border-box;
}

#navbar {
    background-color: var(--dark);
    display: grid;
    grid-template-rows: 100px 1fr;
    color: var(--bright);
    overflow-y: scroll;
}

.title {
    color: wheat;
    display: grid;
    justify-items: center;
    align-items: center;
    font-size: 52px;
    grid-template-rows: 1fr 2px;
}

.title::after{
    content: "";
    height: 2px;
    width: 100%;
    background-color: wheat;
}

.index ul {
    display: grid;
    grid-template-rows: repeat(14, 56px);
    list-style: none;
    padding: 0px 16px;
    align-items: center;
    row-gap: 8px
}

.index ul li {
    display: grid;
    align-items: center;
    height: 100%;
}

.index ul li a {
    color: var(--bright);
    text-decoration: none;
}

.index ul li a:hover {
    text-decoration: underline;
}

#main-doc {
    background-color: var(--bright);
    padding: 12px 24px;
    display: grid;
    grid-row-gap: 32px;
    overflow-y: scroll;
    line-height: 20px;
}

.codeBlock {
    background-color: initial;
    color: var(--accent);
}

@media (min-width: 996px) {
    .title {
        font-size: 38px;
    }
}

@media (max-width: 996px) {
    .gridContainer {
        grid-template-columns: 16em 1fr;
    }

    pre {
        margin: 0px;
    }

    .title {
        font-size: 36px;
    }
}

@media (max-width: 768px) {
    .gridContainer {
        grid-template-columns: unset;
        grid-template-rows: 14em 1fr;
    }

    .title {
        font-size: 28px;
    }

    #navbar {
        grid-template-rows: 64px 1fr;
    }

    #main-doc {
        padding: 12px 16px;
    }

    .index ul {
        grid-template-rows: repeat(14, 38px);
    }

    .headerText {
        font-size: 30px;
    }

    pre {
        padding: 8px 16px;
        overflow-x: auto;
    }
}

@media (max-width: 400px) {
    #main-doc {
        padding: 12px 0px;
    }
    
    .headerText {
        margin: 8px 8px;
    }

    article {
        margin: 0 8px;
    }

    article ul {
        padding-left: 16px;
    }

    pre {
        width: 78vw;
    }
}

